package dev.gxsoft.blogrestapi2;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class BlogRestApi2Application {

    public static void main(String[] args) {
        SpringApplication.run(BlogRestApi2Application.class, args);
    }

}
